[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/refcell/roxy"
repository = "https://github.com/refcell/roxy"

[workspace]
resolver = "2"
members = ["bin/*", "crates/*", "tests", "examples/full-demo"]
default-members = ["bin/roxy-proxy"]
exclude = ["fuzz"]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# local crates
roxy-types = { version = "0.1.0", path = "crates/types" }
roxy-traits = { version = "0.1.0", path = "crates/traits" }
roxy-runtime = { version = "0.1.0", path = "crates/runtime" }
roxy-backend = { version = "0.1.0", path = "crates/backend" }
roxy-cache = { version = "0.1.0", path = "crates/cache" }
roxy-rpc = { version = "0.1.0", path = "crates/rpc" }
roxy-server = { version = "0.1.0", path = "crates/server" }
roxy-config = { version = "0.1.0", path = "crates/config" }
roxy-test-utils = { version = "0.1.0", path = "crates/test-utils" }
roxyproxy-cli = { version = "0.1.0", path = "crates/cli" }

# alloy - Ethereum primitives and JSON-RPC types
alloy-primitives = "1.4"
alloy-json-rpc = "1.0"

# async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"

# networking
hyper = "1.0"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.4", features = ["retry", "timeout", "limit", "util", "steer"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"

# error handling
eyre = "0.6"

# derive macros
derive_more = { version = "2.0", features = ["full"] }

# logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-derive = "0.1"

# caching
lru = "0.12"
redis = { version = "0.27", features = ["tokio-comp"] }

# compression
brotli = "8.0"

# config
toml = "0.8"

# testing
rstest = "0.23"
criterion = { version = "0.5", features = ["async_tokio"] }

# fuzzing
arbitrary = { version = "1", features = ["derive"] }
