[package]
name = "roxy-backend"
description = "Backend implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
roxy-types.workspace = true
roxy-traits.workspace = true

# alloy
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true

# async
tokio.workspace = true

# tower
tower.workspace = true
pin-project-lite = "0.2"
futures = "0.3"

# networking
reqwest.workspace = true

# serialization
serde_json.workspace = true

# misc
tracing.workspace = true
derive_more.workspace = true

