[package]
name = "roxyproxy-cli"
description = "CLI utilities for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
roxy-config.workspace = true
roxy-server.workspace = true
roxy-backend.workspace = true
roxy-rpc.workspace = true
roxy-traits.workspace = true
roxy-types.workspace = true
roxy-cache.workspace = true

# cli
clap = { version = "4.5", features = ["derive"] }

# async
tokio.workspace = true
axum.workspace = true
tower.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

# error handling
eyre.workspace = true

